<resources>
    <string name="app_name">ALC Test</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="ademola_tikare">Ademola Tikare</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_tiksy2009_gmail_com">Email: tiksy2009@gmail.com</string>
    <string name="phone_number_2348135911718">Phone Number: 2348135911718</string>
    <string name="slack_username_demimola24">Slack Username: @Demimola24</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="alc_4">ALC 4 Phase 1</string>
</resources>
