<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:layout_height="wrap_content">



    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="180dp"
            android:src="@drawable/image"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/holo_blue_dark"
            android:layout_height="180dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:text="@string/ademola_tikare"
            android:layout_height="wrap_content"/>

    <View android:layout_width="match_parent"
          android:background="@android:color/darker_gray"
          android:layout_height="1dp"/>

    <TextView android:layout_width="match_parent"
              android:text="@string/track_android"
              android:layout_marginTop="32dp"
              android:layout_marginStart="32dp"
              android:textSize="18sp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/country_nigeria"
              android:layout_marginTop="32dp"
              android:layout_marginStart="32dp"
              android:textSize="18sp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/email_tiksy2009_gmail_com"
              android:layout_marginTop="32dp"
              android:layout_marginStart="32dp"
              android:textSize="18sp"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/phone_number_2348135911718"
              android:layout_marginTop="32dp"
              android:layout_marginStart="32dp"
              android:textSize="18sp"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="match_parent"
              android:text="@string/slack_username_demimola24"
              android:layout_marginTop="32dp"
              android:layout_marginStart="32dp"
              android:textSize="18sp"
              android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>