<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".activities.MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_alc_4_0"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    <Button
            android:id="@+id/bt_about_alc"
            android:layout_width="wrap_content"
            android:text="@string/about_alc"
            android:padding="4dp"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/bt_my_profile"
            android:layout_width="wrap_content"
            android:text="@string/my_profile"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/bt_about_alc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>